@@ -1,0 +1,12 @@
+package com.ansorgit.plugins.bash.lang.psi.stubs.api;
+
+import com.ansorgit.plugins.bash.lang.psi.api.function.BashFunctionDef;
+import com.ansorgit.plugins.bash.lang.psi.api.vars.BashVarDef;
+import com.intellij.psi.stubs.NamedStub;
+
+/**
+ * @author jansorg
+ */
+public interface BashVarDefStub extends NamedStub<BashVarDef> {
+
+}
