@@ -1,0 +1,13 @@
+package com.ansorgit.plugins.bash.lang.psi.stubs.index;
+
+/**
+ * User: jansorg
+ * Date: 12.01.12
+ * Time: 13:31
+ */
+public final class BashIndexVersion {
+    private BashIndexVersion() {
+    }
+
+    public static int VERSION = 3;
+}
