@@ -172,13 +172,4 @@ public class ArithmeticParserTest extends MockPsiTest {
         //((1 %= 1))
         mockTestError(arithmeticTest, EXPR_ARITH, NUMBER, ARITH_ASS_MOD, NUMBER, _EXPR_ARITH);
     }
-
-    @Test
-    @Ignore
-    public void testOperatorErrors() throws Exception {
-        //((${x}++))
-        //this kind of error should be marked in the parsed psi tree.
-        //the l-value of the increment operator should be a variable and not a variable value
-        mockTestError(arithmeticTest, EXPR_ARITH, DOLLAR, LEFT_CURLY, WORD, RIGHT_CURLY, ARITH_PLUS_PLUS, _EXPR_ARITH);
-    }
 }
